<resources>
    <string name="app_name">Car Repair Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="all">All</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="info">It should be possible to close the task without leaving the screen (it would be a bonus if this can be done with a swipe to the left).
When the task is closed, the application should display the price for all work on this machine.
When closing a task, the application must be able to calculate the price on its own, without requests to the server.
Pair of work and cost should be stored in the phone.</string>
    <string name="add_order">Add order</string>
    <string name="hint_vint">VIN</string>
    <string name="check">Check</string>
    <string name="hint_make">Brand</string>
    <string name="hint_model">Model</string>
    <string name="hint_serial_number">Serial number</string>
    <string name="add_task">Add task</string>
    <string name="hint_task">Task</string>
    <string name="hint_cost">Cost</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="vehicle_not_found">Vehicle not found!</string>
    <string name="choose">Choose one of them</string>
    <string name="choose_make">Choose brand first</string>
    <string name="info_title">Info</string>
    <string name="task">Task:</string>
    <string name="language">Language</string>
    <string name="name_a_z">Name(A-Z)</string>
    <string name="name_z_a">Name(Z-A)</string>
    <string name="date">Date</string>
    <string name="date_desc">Date descending</string>
    <string name="model">Model:</string>
    <string name="make">Brand:</string>
    <string name="serial_number">Serial number:</string>
    <string name="vin">VIN:</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
</resources>