<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/name"
                android:title="@string/name_a_z" />
            <item
                android:id="@+id/name_desc"
                android:title="@string/name_z_a" />
            <item
                android:id="@+id/date"
                android:title="@string/date" />
            <item
                android:id="@+id/date_desc"
                android:title="@string/date_desc" />
        </menu>

    </item>

    <item
        android:id="@+id/language"
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/english"
                android:title="@string/english" />
            <item
                android:id="@+id/russian"
                android:title="@string/russian" />
        </menu>
    </item>

</menu>