<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddOrderFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/main_color"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_left"
                app:title="@string/add_order"
                app:titleTextColor="@color/white" />


            <LinearLayout
                android:id="@+id/vin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <EditText
                    android:id="@+id/vin"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hint_vint" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/check"
                    style="@style/btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/check" />

            </LinearLayout>

            <TextView
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:background="@drawable/edittext_back"
                android:gravity="center_vertical"
                android:hint="@string/make"
                android:paddingHorizontal="@dimen/dimen_16"
                android:textColor="@color/main_color"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/vin_layout" />

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:background="@drawable/edittext_back"
                android:gravity="center_vertical"
                android:hint="@string/model"
                android:paddingHorizontal="@dimen/dimen_16"
                android:textColor="@color/main_color"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/make" />

            <EditText
                android:id="@+id/serial_number"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:hint="@string/hint_serial_number"
                app:layout_constraintTop_toBottomOf="@id/model" />

            <LinearLayout
                android:id="@+id/task_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/serial_number" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_task"
                style="@style/btn_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_16"
                android:text="@string/add_task"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_order"
        style="@style/btn_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:layout_marginBottom="@dimen/dimen_16"
        android:text="@string/add_order"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>